# music

./: CMakeLists.txt  playerwindow.cpp  taglib_utils.cpp
.github/workflows/: Clean source files from invalid characters  github_workflows_windows-release_Version2.yml  windows-release.yml
include/: audio_effects.h  enhanced_playerwindow.h  ffmpegplayer.h  gesture_system.h  include_ffmpeg_waveform_Version3.h  include_playlist_Version3.h  include_playlistmanager_Version4.h  include_songinfo_Version3.h  include_taglib_utils_Version3.h  materialui_components.h  playerwindow.h  playlist.h  playlistmanager.h  smart_playlist.h  spectrum_analyzer.h  taglib_utils.h
src/: ffmpeg_waveform.cpp  ffmpeg_waveform.h  ffmpegplayer.cpp  main.cpp  materialui_components.cpp  playerwindow.cpp  playerwindow.h  playlist.cpp  playlistmanager.cpp  playlistmanager.h  songinfo.h  src_ffmpeg_waveform_Version3.cpp  src_main_Version3.cpp  src_playerwindow_Version4.h  src_playerwindow_Version5.cpp  src_playlist_Version3.cpp  src_playlistmanager_Version3.cpp  src_taglib_utils_Version3.cpp  taglib_utils.cpp  taglib_utils.h
src/resources/: icon.rc  src_resources_icon_Version2.rc
src/ui/: lyricsvisualwidget.cpp  lyricsvisualwidget.h  src_ui_lyricsvisualwidget_Version3.h  src_ui_lyricsvisualwidget_Version4.cpp
